fixed form alignment

--- a/src/Register.css
+++ b/src/Register.css
@@ -17,6 +17,7 @@ body{
     width: 400px;
     margin: 50px auto;
     margin-top:30px;
+    margin-left: 70px;
     padding-bottom: 20px;
     max-height:fit-content;
     border-radius: 10px;
